# scylla-crypto-ticker-rs

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml
infra/: deploy.tf  network.tf  role.tf
migrations/: 20230724053829_create_orders.cql  migrate.sh
public/: index.html  main.js  styles.css
src/: main.rs
src/db/: connection.rs  mod.rs  models.rs  queries.rs
src/util/: charts.rs  market_data.rs  mod.rs  parser.rs  parsers.rs
src/web/: mod.rs  routes.rs  server.rs
