[package]
name = "scylladb-order-book-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Barter Ecosystem
barter = "0.8.13"
barter-data = "0.7.0"
barter-integration = "0.5.3"

# Async
tokio = { version = "1.20.1", features = ["full"] }
tokio-stream = { version = "0.1.9", features = ["sync"] }

# Logging
tracing = { version = "0.1.37", default-features = false }
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "json"] }

# Database
scylla = "0.8.2"

# Results
thiserror = "1.0.32"
anyhow = "1.0.44"

# SerDe
serde = { version = "1.0.143", features = ["derive"] }
serde_json = "1.0.83"

# Other
chrono = "0.4"
regex = "1.5"
lowcharts = "0.5.8"
structopt = "0.3.24"
rocket = { version = "0.5.0-rc.1", features = ["json"] }
parse_duration = "2.1.1"